rs/macros/tests/ui/gprogram_fails_unknown_args.stderr
error: `program` attribute can only contain `handle_reply`, `handle_signal`, `crate`, `accept_transfers` parameters
 --> tests/ui/gprogram_fails_unknown_args.rs:5:11
  |
5 | #[program(_handle_reply = my_handle_reply, handle_signal = my_handle_signal)]
  |           ^^^^^^^^^^^^^
